--- a/Gateway/Shared/MainLayout.razor
+++ b/Gateway/Shared/MainLayout.razor
@@ -1,15 +1,42 @@
-﻿@inherits LayoutComponentBase
+﻿@using Gateway.Data.State
+
+@inherits LayoutComponentBase
+
+@inject AppState AppState
+
+@implements IDisposable
 
 <PageTitle>Gateway</PageTitle>
 
 <div class="page">
     <div class="sidebar">
         <NavMenu/>
+        
+        <div class="warehouse-list">
+            <WarehouseList />
+        </div>
     </div>
 
     <main>
+        <div class="top-row px-4">
+            Current warehouse: @AppState.CurrentWarehouse
+        </div>
+
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
+@code {
+
+    protected override void OnInitialized()
+    {
+        AppState.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        AppState.OnChange -= StateHasChanged;
+    }
+}
