--- a/Gateway/Shared/MainLayout.razor.css
+++ b/Gateway/Shared/MainLayout.razor.css
@@ -12,6 +12,11 @@ main {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
+.warehouse-list {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
